// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PokemonCard Snapshot Tests matches snapshot for basic pokemon 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root h-80 flex flex-col px-3 py-2 border-6 border-neutral-200 css-i2mtdz-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); background-color: rgb(242, 242, 242);"
  >
    <div
      class="flex justify-between flex-row px-0 mb-2"
    >
      <div
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-rc5xui-MuiTypography-root"
        style="--Typography-textAlign: center;"
      >
        bulbasaur
      </div>
      <div
        data-testid="pokemon-type-list"
      >
        <span
          data-testid="type-grass"
        >
          grass
        </span>
        <span
          data-testid="type-poison"
        >
          poison
        </span>
      </div>
    </div>
    <div
      class="flex justify-center"
      style="background: linear-gradient( 135deg, rgba(255, 215, 0, 0.8) 0%, rgba(173, 216, 230, 0.8) 40%, rgba(255, 182, 193, 0.8) 100% ); box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);"
    >
      <img
        alt="bulbasaur"
        data-nimg="1"
        decoding="async"
        height="120"
        src="/_next/image?url=https%3A%2F%2Fexample.com%2Fbulbasaur.png&w=384&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fbulbasaur.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fbulbasaur.png&w=384&q=75 2x"
        style="color: transparent;"
        width="140"
      />
    </div>
  </div>
</div>
`;

exports[`PokemonCard Snapshot Tests matches snapshot for multi-type pokemon 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root h-80 flex flex-col px-3 py-2 border-6 border-neutral-200 css-i2mtdz-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); background-color: rgb(242, 242, 242);"
  >
    <div
      class="flex justify-between flex-row px-0 mb-2"
    >
      <div
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-rc5xui-MuiTypography-root"
        style="--Typography-textAlign: center;"
      >
        charizard
      </div>
      <div
        data-testid="pokemon-type-list"
      >
        <span
          data-testid="type-fire"
        >
          fire
        </span>
        <span
          data-testid="type-flying"
        >
          flying
        </span>
      </div>
    </div>
    <div
      class="flex justify-center"
      style="background: linear-gradient( 135deg, rgba(255, 215, 0, 0.8) 0%, rgba(173, 216, 230, 0.8) 40%, rgba(255, 182, 193, 0.8) 100% ); box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);"
    >
      <img
        alt="charizard"
        data-nimg="1"
        decoding="async"
        height="120"
        src="/_next/image?url=https%3A%2F%2Fexample.com%2Fcharizard.png&w=384&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fcharizard.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fcharizard.png&w=384&q=75 2x"
        style="color: transparent;"
        width="140"
      />
    </div>
  </div>
</div>
`;

exports[`PokemonCard Snapshot Tests matches snapshot for single-type pokemon 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root h-80 flex flex-col px-3 py-2 border-6 border-neutral-200 css-i2mtdz-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); background-color: rgb(242, 242, 242);"
  >
    <div
      class="flex justify-between flex-row px-0 mb-2"
    >
      <div
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-rc5xui-MuiTypography-root"
        style="--Typography-textAlign: center;"
      >
        pikachu
      </div>
      <div
        data-testid="pokemon-type-list"
      >
        <span
          data-testid="type-electric"
        >
          electric
        </span>
      </div>
    </div>
    <div
      class="flex justify-center"
      style="background: linear-gradient( 135deg, rgba(255, 215, 0, 0.8) 0%, rgba(173, 216, 230, 0.8) 40%, rgba(255, 182, 193, 0.8) 100% ); box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);"
    >
      <img
        alt="pikachu"
        data-nimg="1"
        decoding="async"
        height="120"
        src="/_next/image?url=https%3A%2F%2Fexample.com%2Fpikachu.png&w=384&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fpikachu.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fpikachu.png&w=384&q=75 2x"
        style="color: transparent;"
        width="140"
      />
    </div>
  </div>
</div>
`;
